src/test/ui/issues/issue-52060.stderr
error[E0013]: constants cannot refer to statics, use a constant instead
  --> $DIR/issue-52060.rs:4:26
   |
LL | static B: [u32; 1] = [0; A.len()];
   |                          ^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52060.rs:4:26
   |
LL | static B: [u32; 1] = [0; A.len()];
   |                          ^ "constants accessing static items" needs an rfc before being allowed inside constants

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0013, E0080.
For more information about an error, try `rustc --explain E0013`.
